--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <span class="text-primary">Cho</span>
         </h1>
         <div class="subheading mb-5">· Melbourne, VIC · (+61) 0432-630-239 ·
-          <a href="mailto:davidcho0319@gmail.com">davidcho0319o@gmail.com</a>
+          <a href="mailto:davidcho0319@gmail.com">davidcho0319@gmail.com</a>
         </div>
         <p class="lead mb-5">I am a passionate full stack developer with reliability and consistency, also good at working under time pressure, seeking a full-time position in the field of Web / Mobile app Development.</p>
         <div class="social-icons">
