--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   <div class="row">
 
     <div class="col-md-8">
-      <img class="img-fluid" src="./img/skinfirst.PNG" alt="">
+      <img class="img-fluid" src="./img/skinfirstcare.PNG" alt="">
     </div>
 
     <div class="col-md-4">
@@ -215,14 +215,14 @@
       <p>Skin-care, Cosmetic E-commerce App, Collaborated with UX designer.</p>
       <h3 class="my-3">Project Details</h3>
       <ul>
-        <li>Ruby on Rails</li>
+        <li>Ruby</li>
         <li>Socket.io</li>
         <li>Postgresql</li>
         <li>RESTful API</li>
         <li>BootStrap</li>
         <li>Git, MVC</li>
       </ul>
-      <a class="btn btn-primary" href="https://www.skinfirstcare.com">View Project</a>
+      <a class="btn btn-primary" href="https://glacial-peak-03925.herokuapp.com/">View Project</a>
     </div>
 
   </div>
