--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         <div class="subheading mb-5">· Melbourne, VIC · (+61) 0432-630-239 ·
           <a href="mailto:davidcho0319@gmail.com">davidcho0319@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am a passionate full stack developer with reliability and consistency, also good at working under time pressure, seeking a full-time position in the field of Web / Mobile app Development.</p>
+        <p class="lead mb-5">I am a passionate full stack developer with 7 years background in mining industry. 
+          <br> I am very reliabe and consistent, also good at working under time pressure, seeking a full-time position in the field of Web / Mobile app Development.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/davidcho0319/">
             <i class="fab fa-linkedin-in"></i>
