--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>David Cho's Portfolio</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -119,10 +119,10 @@
       <ul>
         <li>React Native, React</li>
         <li>NFC</li>
-        <li>Mongo DB</li>
-        <li>Express</li>
-        <li>JWT</li>
-        <li>RESTful API / Git / MVC</li>
+        <li>.NET CORE WEB API</li>
+        <li>SQL</li>
+        <li>Micrsoft Azure</li>
+        <li>RESTful API / Git</li>
       </ul>
       <a class="btn btn-primary" href="https://drive.google.com/open?id=1inq1XgCR6X2-vp-dy75JU1lQL2aB9-iI">View Project</a>
     </div>
