--- a/index.html
+++ b/index.html
@@ -100,6 +100,40 @@
 
   <!-- Portfolio Item Heading -->
   <h1 class="my-4">
+    <small>YouFoodie End-to-End E-Commerce Solution</small>
+  </h1>
+
+  <!-- Portfolio Item Row -->
+  <div class="row">
+
+    <div class="col-md-8">
+      <img class="img-fluid youfoodie" src="./img/youfoodie01.PNG" alt="">
+      <img class="img-fluid youfoodie" src="./img/youfoodie02.PNG" alt="">
+      <img class="img-fluid youfoodie" src="./img/youfoodie03.PNG" alt="">
+      <img class="img-fluid youfoodie" src="./img/youfoodie04.PNG" alt="">
+    </div>
+
+    <div class="col-md-4">
+      <h3 class="my-3">Project Description</h3>
+      <p>End-to-end Hospitality business E-commerce solution. Connects indivisual business for business home, ordering process, billing, management.</p>
+      <h3 class="my-3">Project Details</h3>
+      <ul>
+        <li>React.js / Redux</li>
+        <li>Node.js</li>
+        <li>MongoDB</li>
+        <li>RESTful API / Git</li>
+      </ul>
+      <a class="btn btn-primary" href="https://youfoods.herokuapp.com/">View Project</a>
+    </div>
+
+  </div>
+  <hr>
+
+        <!-- Page Content -->
+<div class="container">
+
+  <!-- Portfolio Item Heading -->
+  <h1 class="my-4">
     <small>NFC Tag based RFID Mobile APP</small>
   </h1>
 
@@ -257,6 +291,19 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <img src="https://media-exp1.licdn.com/dms/image/C560BAQEioEOwaa-IFg/company-logo_100_100/0?e=1593043200&v=beta&t=sc69nJ4OqEmZ3JjNqKvRjv6UsSRTtIsxay0hx8VLnHw" alt="">
+            <h3 class="mb-0">CodeStates Bootcamp</h3>
+            <div class="subheading mb-3">Javascript Software Engineering</div>
+            <div>Full Stack Web Development</div>
+            <p></p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Sep 2018 - Dec 2018</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <img src="" alt="">
             <h3 class="mb-0">MTU KOREA</h3>
             <div class="subheading mb-3">Bachelor of Philosophy</div>
@@ -333,16 +380,19 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Proficient in MERN Stack (MongoDB, Express, React, Node.js)</li>
+            MERN Stack (MongoDB, Express, React, Node.js)</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             React Native mobile app development</li>
           <li>
             <i class="fa-li fa fa-check"></i>
+            C# / .NET Core MVC/Web API</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
             Ruby, Ruby on Rails</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            AWS: EC2, RDS, S3</li>
+            AWS / Docker / Kubernetes</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             Database: Sql, NoSql, Redis</li>
@@ -372,8 +422,22 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            General Assembly - Software Engineering Immersive</li>
+            General Assembly Melbourne 
+            - Graduate : Software Engineering Immersive</li>
           <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            CodeStates 
+            - Graduate : Software Engineering (Javascript)</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            SkillsTech Australia
+            - Diploma : Production Engineering</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Methodist Theological University
+            - Bachelor of Philosophy</li>
+          
+          <!-- <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Udemy - Certificate on MERN Stack</li>
           <li>
@@ -387,7 +451,7 @@
             Udemy - Certificate on AWS Architect</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            And more..</li>
+            And more..</li> -->
           
           <!-- <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
