--- a/index.html
+++ b/index.html
@@ -164,6 +164,39 @@
   </div>
   <hr>
 
+  <!-- Portfolio Item Heading -->
+  <h1 class="my-4">
+    <small>.NET Core Web API</small>
+  </h1>
+
+  <!-- Portfolio Item Row -->
+  <div class="row">
+
+    <div class="col-md-8">
+      <img class="img-fluid" src="./img/clock-on.PNG" alt="">
+      <!-- <img class="img-fluid youfoodie" src="./img/youfoodie02.PNG" alt="">
+      <img class="img-fluid youfoodie" src="./img/youfoodie03.PNG" alt="">
+      <img class="img-fluid youfoodie" src="./img/youfoodie04.PNG" alt=""> -->
+    </div>
+
+    <div class="col-md-4">
+      <h3 class="my-3">Project Description</h3>
+      <p>.NET Core Web API with SQL Server, Swagger UI / Docker, Kubernetes / AWS ECS/FARGATE.</p>
+      <h3 class="my-3">Project Details</h3>
+      <ul>
+        <li>.NET Core WEb API</li>
+        <li>SQL Server</li>
+        <li>Swagger UI</li>
+        <li>RESTful API / Git</li>
+        <li>Docker / Kubernetes</li>
+        <li>AWS ECS/FARGATE</li>
+      </ul>
+      <a class="btn btn-primary" href="http://clockonapinet-616384627.ap-southeast-2.elb.amazonaws.com/index.html">View Project</a>
+    </div>
+
+  </div>
+  <hr>
+
   <!-- Page Content -->
 <div class="container">
 
