--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <img src="" alt="">
-            <h3 class="mb-0">MTU KOREA</h3>
+            <h3 class="mb-0">Methodist Theological University KOREA</h3>
             <div class="subheading mb-3">Bachelor of Philosophy</div>
-            <div>Oriental / Western Philosophy</div>
+            <div></div>
             <p></p>
           </div>
           <div class="resume-date text-md-right">
