--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
   <div class="row">
 
     <div class="col-md-8">
-      <img class="img-fluid" src="./img/clock-on.PNG" alt="">
-      <!-- <img class="img-fluid youfoodie" src="./img/youfoodie02.PNG" alt="">
-      <img class="img-fluid youfoodie" src="./img/youfoodie03.PNG" alt="">
-      <img class="img-fluid youfoodie" src="./img/youfoodie04.PNG" alt=""> -->
+      <img class="img-fluid youfoodie" src="./img/basket api.PNG" alt="">
+      <img class="img-fluid youfoodie" src="./img/catalog api.PNG" alt="">
+      <img class="img-fluid youfoodie" src="./img/ordering api.PNG" alt="">
+      <img class="img-fluid youfoodie" src="./img/rabbitMQ.PNG" alt="">
     </div>
 
     <div class="col-md-4">
