--- a/index.html
+++ b/index.html
@@ -181,11 +181,12 @@
 
     <div class="col-md-4">
       <h3 class="my-3">Project Description</h3>
-      <p>.NET Core Web API with SQL Server, Swagger UI / Docker, Kubernetes / AWS ECS/FARGATE.</p>
+      <p>.NET Core E-Commerce Microservies with EventBus : rabbitMQ, SQL/MongoDB/Redis, Docker/Kubernetes, AWS ECS/FARGATE.</p>
       <h3 class="my-3">Project Details</h3>
       <ul>
         <li>.NET Core WEb API</li>
-        <li>SQL Server</li>
+        <li>EvnetBus : rabbitMQ</li>
+        <li>SQL Server / MongoDB / Redis</li>
         <li>Swagger UI</li>
         <li>RESTful API / Git</li>
         <li>Docker / Kubernetes</li>
