--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
   <!-- Portfolio Item Heading -->
   <h1 class="my-4">
-    <small>.NET Core Web API</small>
+    <small>.NET Core Microservices</small>
   </h1>
 
   <!-- Portfolio Item Row -->
@@ -181,7 +181,7 @@
 
     <div class="col-md-4">
       <h3 class="my-3">Project Description</h3>
-      <p>.NET Core E-Commerce Microservies with EventBus : rabbitMQ, SQL/MongoDB/Redis, Docker/Kubernetes, AWS ECS/FARGATE.</p>
+      <p>.NET Core E-Commerce Microservices with EventBus : rabbitMQ, SQL/MongoDB/Redis, Docker/Kubernetes, AWS ECS/FARGATE.</p>
       <h3 class="my-3">Project Details</h3>
       <ul>
         <li>.NET Core WEb API</li>
