--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <div class="col-md-4">
       <h3 class="my-3">Project Description</h3>
-      <p>NFC Tech based RFID App for Security company collaboration. Employee's Touch-On records is accessible from Admin website.</p>
+      <p>NFC Tech based RFID App for Security company collaboration project.</p>
       <h3 class="my-3">Project Details</h3>
       <ul>
         <li>React Native, React</li>
