--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <!-- Portfolio Item Heading -->
   <h1 class="my-4">
-    <small>YouFoodie End-to-End E-Commerce Solution</small>
+    <small>E-commerce project : youfoodie</small>
   </h1>
 
   <!-- Portfolio Item Row -->
@@ -115,7 +115,7 @@
 
     <div class="col-md-4">
       <h3 class="my-3">Project Description</h3>
-      <p>End-to-end Hospitality business E-commerce solution. Connects indivisual business for business home, ordering process, billing, management.</p>
+      <p>E-commerce Project with MERN(React / Node.js) Stack</p>
       <h3 class="my-3">Project Details</h3>
       <ul>
         <li>React.js / Redux</li>
@@ -130,39 +130,7 @@
   <hr>
 
         <!-- Page Content -->
-<div class="container">
 
-  <!-- Portfolio Item Heading -->
-  <h1 class="my-4">
-    <small>NFC Tag based RFID Mobile APP</small>
-  </h1>
-
-  <!-- Portfolio Item Row -->
-  <div class="row">
-
-    <div class="col-md-8">
-      <img class="img-fluid nfcimg" src="./img/nfc tag.jpg" alt="">
-      <img class="img-fluid nfcimg" src="./img/nfc tag2.jpeg" alt="">
-      <img class="img-fluid nfcimg" src="./img/nfc tag3.jpeg" alt="">
-    </div>
-
-    <div class="col-md-4">
-      <h3 class="my-3">Project Description</h3>
-      <p>NFC Tech based RFID App for Security company collaboration project.</p>
-      <h3 class="my-3">Project Details</h3>
-      <ul>
-        <li>React Native, React</li>
-        <li>NFC</li>
-        <li>.NET CORE WEB API</li>
-        <li>SQL</li>
-        <li>Micrsoft Azure</li>
-        <li>RESTful API / Git</li>
-      </ul>
-      <a class="btn btn-primary" href="https://drive.google.com/open?id=1inq1XgCR6X2-vp-dy75JU1lQL2aB9-iI">View Project</a>
-    </div>
-
-  </div>
-  <hr>
 
   <!-- Portfolio Item Heading -->
   <h1 class="my-4">
@@ -197,6 +165,40 @@
 
   </div>
   <hr>
+
+  <div class="container">
+
+    <!-- Portfolio Item Heading -->
+    <h1 class="my-4">
+      <small>NFC Tag based RFID Mobile APP</small>
+    </h1>
+  
+    <!-- Portfolio Item Row -->
+    <div class="row">
+  
+      <div class="col-md-8">
+        <img class="img-fluid nfcimg" src="./img/nfc tag.jpg" alt="">
+        <img class="img-fluid nfcimg" src="./img/nfc tag2.jpeg" alt="">
+        <img class="img-fluid nfcimg" src="./img/nfc tag3.jpeg" alt="">
+      </div>
+  
+      <div class="col-md-4">
+        <h3 class="my-3">Project Description</h3>
+        <p>NFC Tech based RFID App for Security company collaboration project.</p>
+        <h3 class="my-3">Project Details</h3>
+        <ul>
+          <li>React Native, React</li>
+          <li>NFC</li>
+          <li>.NET CORE WEB API</li>
+          <li>SQL</li>
+          <li>Micrsoft Azure</li>
+          <li>RESTful API / Git</li>
+        </ul>
+        <a class="btn btn-primary" href="https://drive.google.com/open?id=1inq1XgCR6X2-vp-dy75JU1lQL2aB9-iI">View Project</a>
+      </div>
+  
+    </div>
+    <hr>
 
   <!-- Page Content -->
 <div class="container">
