--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <li>Docker / Kubernetes</li>
         <li>AWS ECS/FARGATE</li>
       </ul>
-      <a class="btn btn-primary" href="http://clockonapinet-616384627.ap-southeast-2.elb.amazonaws.com/index.html">View Project</a>
+      <a class="btn btn-primary" href="#">View Project</a>
     </div>
 
   </div>
