--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
 
     <div class="col-md-4">
       <h3 class="my-3">Project Description</h3>
-      <p>E-commerce Project with MERN(React / Node.js) Stack</p>
+      <p>E-commerce Project with MERN(React / Node.js) Stack <br>
+        
+      </p>
       <h3 class="my-3">Project Details</h3>
       <ul>
         <li>React.js / Redux</li>
@@ -134,7 +136,7 @@
 
   <!-- Portfolio Item Heading -->
   <h1 class="my-4">
-    <small>.NET Core Microservices</small>
+    <small>.NET Core e-commerce Microservices</small>
   </h1>
 
   <!-- Portfolio Item Row -->
