--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
         <li>React.js / Redux</li>
         <li>Node.js</li>
         <li>MongoDB</li>
+        <li>JWT / Payment Gateway</li>
+        <li>Responsive App</li>
         <li>RESTful API / Git</li>
       </ul>
       <a class="btn btn-primary" href="https://youfoods.herokuapp.com/">View Project</a>
